@@ -1,5 +1,5 @@
 AUX postinstall-en.txt 271 RMD160 add1e5127a92ce1bea1c867a6bab4d49467b2b5f SHA1 1966f3c2f815276a5d25e90f5841b152c8131419 SHA256 674d1bb821b4dc9b64880e12b0e8ca62f439128d92c936e4337782be6b5d9878
 DIST SugarCE-5.5.0.zip 15725059 RMD160 f15669e860cbbe545372dad28a4be126c6c0dbb9 SHA1 80d5bf32e4b4b4f4682b278f66be4cc378754c47 SHA256 d9518b85d065cfa80efcfcb63afa930d06903be8f893d11d46d6176a6a1420d6
-EBUILD sugarcrm-5.5.0.ebuild 1669 RMD160 93bca75a4486b975d8e82f09458838d393b26f25 SHA1 1785c2cc3bf887b368c482eae0198b47aa551612 SHA256 94bc147c9e62131618ec7083eb0dccb2ed74f051415a089c1a43495af0d4520a
-MISC ChangeLog 1817 RMD160 d934bf212c4631990c9f4593af2c551f4614c278 SHA1 310c241f1805d4e61578efcbfc764ac5021aef53 SHA256 c723a7b6dbae84d4e80fbcc51ece08ac04b6a343ad3e9e414d627d8a816182b1
+EBUILD sugarcrm-5.5.0.ebuild 1648 RMD160 2ee44efa59db5286afd7852632413c1062d7d81a SHA1 09ed87226f0963e388dee754f63fb9db8fdad06f SHA256 3688db12562cec74f9598fa03bdceef48579754d03da6dcb456b185eef947950
+MISC ChangeLog 2013 RMD160 ae674ba24b459d850494c73a191f8dbf508d036e SHA1 ffd8f86cced381b9328fee77387a8a00370816d8 SHA256 12dfd1b262bcf0ad89255701c427479733a28ea352e94d8f6d27969285267b90
 MISC metadata.xml 284 RMD160 1019fd51daed9c34a494761014d60eb606421a0b SHA1 12c23784f913732db6c55b500655b99e7282d009 SHA256 bd0ec6d455161a96149013a599770f7d2827bbdc94357f538f0050b1e6b8cdc6
