@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> sugarcrm-5.5.0.ebuild:
+  delete mysql depends
+
   06 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru> sugarcrm-5.5.0.ebuild:
   fix depend logic
 
